apps/loki/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  labels:
    app.kubernetes.io/name: loki
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: loki
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loki
        app.kubernetes.io/instance: loki-prod
        app.kubernetes.io/component: loki
        app.kubernetes.io/part-of: loki
      annotations:
        prometheus.io/port: "3100"
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: "loki"
          image: "grafana/loki:3.7.8"
          args: []
          ports:
            - name: "loki"
              containerPort: 3100
              protocol: "TCP"
            - name: "grpc"
              containerPort: 9095
              protocol: "TCP"
            - name: "memberlist"
              containerPort: 7946
              protocol: TCP
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          readinessProbe:
            httpGet:
              path: "/ready"
              port: "loki"
            initialDelaySeconds: 10
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: "/ready"
              port: "loki"
            initialDelaySeconds: 30
            timeoutSeconds: 1
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
            limits:
              memory: "1024Mi"
          volumeMounts:
            - name: "storage"
              mountPath: "/var/loki"
            - name: "loki-config"
              mountPath: "/etc/loki"
      volumes:
        - name: "storage"
          emptyDir:
            sizeLimit: "5Gi"
        - name: "loki-config"
          configMap:
            name: "loki-config"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              preference:
                matchExpressions:
                  - key: "cpu_speed"
                    operator: "In"
                    values:
                      - "fast"
