apps/loki/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "loki"
spec:
  selector:
    app.kubernetes.io/name: "loki"
  ports:
    - protocol: TCP
      port: 3100
      targetPort: "loki"
  type: ClusterIP
