apps/loki/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: loki
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vector
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vector
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 5432
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              networking/namespace: kube-system
          podSelector: {}
      ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              name: keycloak
          podSelector:
            matchLabels:
              app.kubernetes.io/name: keycloak
